# opengl-training-extended

./: .gitignore  README.md
001-first-program-with-make/: Makefile  main.cpp
003-gl-init/: CMakeLists.txt  main.cpp
003a-gl-init/: main.cpp
004-first-shader/: main.cpp
05-vertex-buffers/: main.cpp
06/: main.cpp  vs.glsl
07-vertex-colors/: fs.glsl  main.cpp
08/: main.cpp
09/: main.cpp  vs.glsl
10/: fs.glsl  main.cpp
11/: fs.glsl  main.cpp
12/: fs.glsl  main.cpp
12/assets/: cube.colors  cube.uvs  cube.vertices
13-flexible-vertex-format/: main.cpp  vs.glsl
13-flexible-vertex-format/assets/: cube.indices
14/: main.cpp
14/assets/models/: cube.vertices
15-basic-cubemap/: main.cpp
15-basic-cubemap/assets/models/: cube.vertices
15-basic-cubemap/assets/shaders/: m_v_p_uv_fs.glsl
16-lighting-ambient/: main.cpp  vertex.h
16-lighting-ambient/assets/models/: cube.vertices
16-lighting-ambient/assets/shaders/: basic_white_vs.glsl  m_v_p_uv_light_fs.glsl  m_v_p_uv_vs.glsl
17-lighting-directional/: main.cpp
17-lighting-directional/assets/shaders/: mvp_vs.glsl  (+2 more)
18-better-normals/: main.cpp
19-lighting-specular/: main.cpp  vertex.h
20-diffuse-lighting/: main.cpp
21-multi-texturing/: main.cpp
22-shadow-map/: CMakeLists.txt  main.cpp
22-shadow-map/assets/models/: ground.vertices
22-shadow-map/assets/shaders/: directional_shadow_mapper_fs.glsl  directional_shadow_mapper_vs.glsl  m_v_p_uv_fs.glsl  mvp_fs.glsl  mvp_uv_fs.glsl  mvp_uv_normal_directional_light_sr_fs.glsl  mvp_uv_normal_directional_light_sr_vs.glsl  mvp_uv_vs.glsl
(+9 files in other folders)
